[package]
name          = "claim-sc"
authors       = ["Alex Gherghina <alex@timeworx.io>"]
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
thiserror       = { workspace = true }
semver          = { workspace = true }
cw1-whitelist   = { workspace = true, features = ["library"] }

[dev-dependencies]
cw1-whitelist   = { workspace = true, features = ["library"] }
